Fixed video blurryness?

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,6 @@ vertical-align: middle;
 }
 .img-container video{
   max-width: 150%;
-  width: 1280px;
   max-height: 800px;
   margin: 0 -50%;
 }
